# timecard-clone

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: backend-rules.mdc  backend-structure.mdc  frontend-rules.mdc  frontend-structure.mdc  project-rules.mdc  requirements-definition.mdc
.cursor/rules/backend/: async.mdc  fast-api.mdc  python.mdc  schema.mdc
.cursor/rules/frontend/: auth.mdc  client-component-usecase.mdc  collocation.mdc  composition-pattern.mdc  concurrent-fetch.mdc  container-1st-design.mdc  container-presentational-pattern.mdc  data-loader.mdc  data-mutation.mdc  dynamic-rendering-data-cache.mdc  dynamicio.mdc  error-handling.mdc  fine-grained-api-design.mdc  interactive-fetch.mdc  partial-pre-rendering.mdc  pure-server-component.mdc  request-memoization.mdc  request-ref.mdc  router-cache.mdc  server-component.mdc  static-rendering-full-route-cache.mdc  suspense-and-streaming.mdc
backend/: README.md  check_users.py  create_users.py  package.json  pyproject.toml  reset_users.py  timecard_clone.db
backend/app/: __init__.py  main.py
backend/app/attendance/: __init__.py  router.py
backend/app/auth/: __init__.py  dependencies.py  router.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/database/: __init__.py  database.py  init_db.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  attendance.py  user.py
backend/app/routers/: __init__.py  attendance.py  auth.py  user.py
backend/app/schemas/: __init__.py  attendance.py  auth.py  user.py
backend/app/services/: __init__.py  attendance_service.py  auth_service.py
backend/app/users/: router.py
backend/tests/: test_auth0_integration.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: README.md  eslint.config.js  next.config.js  package.json
frontend/src/: middleware.ts
frontend/src/app/: Auth0Provider.tsx  layout.tsx  page.tsx
frontend/src/app/dashboard/: DashboardClient.tsx  DashboardPageClient.tsx  layout.tsx  page.tsx
frontend/src/app/login/: LoginClient.tsx  loginSchema.ts  page.tsx
frontend/src/app/register/: InputField.tsx  RegisterClient.tsx  page.tsx  registerSchema.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAttendance.ts  useAuth0Profile.ts  useLogin.ts
frontend/src/lib/: api.ts  auth0.ts  providers.tsx
(+20 files in other folders)
